kustomize/dendrite/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dendrite
  labels:
    app: dendrite
spec:
  selector:
    matchLabels:
      app: dendrite
  template:
    metadata:
      labels:
        app: dendrite
    spec:
      containers:
      - name: dendrite
        image: matrixdotorg/dendrite-monolith:v0.8.8
        resources:
          requests:
            cpu: "2"
            memory: 8Gi
          limits:
            cpu: "2"
            memory: 8Gi
        readinessProbe:
          httpGet:
            path: /_dendrite/monitor/up
            port: http
          initialDelaySeconds: 5
        ports:
        - name: http
          containerPort: 8008
        volumeMounts:
        - name: media
          mountPath: /var/dendrite/media
        - name: tls
          mountPath: /etc/dendrite/tls
          readOnly: true
        - name: config
          mountPath: /etc/dendrite
          readOnly: true
        - name: signing-key
          mountPath: /etc/dendrite/signing
          readOnly: true
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: dendrite-media
      - name: tls
        secret:
          secretName: rwx-im-tls
      - name: config
        secret:
          secretName: dendrite-config
      - name: signing-key
        secret:
          secretName: dendrite-config
          items:
          - key: matrix_key.pem
            path: matrix_key.pem
