kustomize/dendrite/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dendrite
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8008
  selector:
    app: dendrite
