kustomize/dendrite/base/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dendrite-http
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`matrix.rwx.im`)
    kind: Rule
    middlewares:
    - name: redirect-to-https
    services:
    - name: dendrite
      kind: Service
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dendrite-https
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`matrix.rwx.im`)
    kind: Rule
    services:
    - name: dendrite
      kind: Service
      port: 80
  - match: Host(`rwx.im`) && PathPrefix(`/.well-known/matrix/`)
    kind: Rule
    services:
    - name: nginx
      kind: Service
      port: 8080
  # Use the secret generated by cert-manager
  tls:
    secretName: matrix.rwx.im-tls
